--- a/client/package.json
+++ b/client/package.json
@@ -7,21 +7,22 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "cytoscape": "^3.24.0",
+    "cytoscape-dagre": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "cytoscape": "^3.24.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "css-loader": "^6.0.0",
+    "html-webpack-plugin": "^5.0.0",
+    "style-loader": "^3.0.0",
     "ts-loader": "^9.0.0",
     "typescript": "^5.0.0",
     "webpack": "^5.0.0",
     "webpack-cli": "^5.0.0",
-    "webpack-dev-server": "^4.0.0",
-    "html-webpack-plugin": "^5.0.0",
-    "css-loader": "^6.0.0",
-    "style-loader": "^3.0.0"
+    "webpack-dev-server": "^4.0.0"
   }
 }
