--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,13 @@
     "cytoscape-dagre": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-router-dom": "^5.3.3",
     "css-loader": "^6.0.0",
     "html-webpack-plugin": "^5.0.0",
     "style-loader": "^3.0.0",
